--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <img src="1617249547552.png" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Chas and I'm a <span class="typing-2"></span></div>
+                    <div class="text">I'm Chas and I'm a <span class="typing-2">Full Stack Developer</span></div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
                     <a href="#">Download CV</a>
                 </div>
@@ -123,13 +123,27 @@
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
-                            <span>60%</span>
+                            <span>90%</span>
                         </div>
-                        <div class="line css"></div>
+                        <div class="line html"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>JavaScript</span>
+                            <span>98%</span>
+                        </div>
+                        <div class="line jss"></div>
+                    </div>
+                  <div class="bars">
+                        <div class="info">
+                            <span>Angualar</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="line html"></div>
+                    </div>
+                  <div class="bars">
+                        <div class="info">
+                            <span>React</span>
                             <span>80%</span>
                         </div>
                         <div class="line js"></div>
@@ -140,6 +154,13 @@
                             <span>50%</span>
                         </div>
                         <div class="line php"></div>
+                    </div>
+                  <div class="bars">
+                        <div class="info">
+                            <span>NodeJS</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="line js"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
