--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
                     <div class="bars">
                         <div class="info">
                             <span>JavaScript</span>
-                            <span>98%</span>
+                            <span>90%</span>
                         </div>
-                        <div class="line jss"></div>
+                        <div class="line js"></div>
                     </div>
                   <div class="bars">
                         <div class="info">
