--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             <span>JavaScript</span>
                             <span>90%</span>
                         </div>
-                        <div class="line js"></div>
+                        <div class="line html"></div>
                     </div>
                   <div class="bars">
                         <div class="info">
